Fix CORS for production frontend

--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,7 @@ SECRET_KEY=your-secret-key-change-in-production
 JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
 
 # Database
-DATABASE_URL=cockroachdb://abdullahi:llNRhrP8DCP53Ro2a5dy5g@hill-werebat-12561.jxf.gcp-europe-west3.cockroachlabs.cloud:26257/defaultdb?sslmode=verify-full
+DATABASE_URL=cockroachdb://abdullahi:llNRhrP8DCP53Ro2a5dy5g@hill-werebat-12561.jxf.gcp-europe-west3.cockroachlabs.cloud:26257/defaultdb?sslmode=require
 
 
 # SMTP (Optional - OTPs will print to console if not configured)
