--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,41 @@
-
-# Dependencies
-
-node_modules/
-
-.pnp
-
-.pnp.js
-
-
-
-# Environment variables
-
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+venv/
+.venv/
+env/
+.env
 .env.local
-
 .env.development.local
-ocal
+.env.test.local
+.env.production.local
+*.log
 
-
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.shryke/
 
 # Build outputs
-
 dist/
-
 build/
+.next/
+.vercel/
 
-
-
-# Debug logs
-
-npm-debug.log*
-
-yarn-debug.log*
-
-yarn-error.log*
-
-
-
-# Editor folders
-
+# IDEs
 .vscode/
-
 .idea/
-
+*.swp
+*.swo
 .DS_Store
 
+# Project specific
+backend/app/uploads/
+backend/venv/
+backend/__pycache__/
+frontend/node_modules/
+frontend/dist/
+**/migrations/*.pyc
