--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,5 +13,4 @@ python-magic>=0.4.27
 reportlab>=4.0.9
 gunicorn>=21.2.0
 eventlet>=0.35.1
-sqlalchemy-cockroachdb>=2.0.0
-psycopg2>=2.9.9
+supabase>=2.0.0
